# FaxicUI

./: CMakeLists.txt  README.md
core/src/: Faxic_type.h
core/src/drawer/: drawBase.cpp  drawBase.h  drawComponents.h  draw_buff.h  drawer.cpp  drawer.h
core/src/drawer/component/: DrawRect.cpp  DrawRect.h  drawLine.cpp  drawLine.h
core/src/hal/: Displayers.h  halDisplay.cpp  halDisplay.h
core/src/hal/simulator/: simulator.cpp  simulator.h
test/: CMakeLists.txt
test/drawer/: test.cpp
test/hal/: test.cpp
